--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,16 @@
     <script src="./game.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
+
 <body>
     <header>
         <h1>Tic-tac-toe</h1>
     </header>
     <main>
+        <div class="score">
+            <h2>Player 1</h2>
+            <p id="player1"></p>
+        </div>
         <div id="game">
             <button id="top-left"></button>
             <button id="top-middle"></button>
@@ -23,6 +29,11 @@
             <button id="bottom-middle"></button>
             <button id="bottom-right"></button>
         </div>
+        <div class="score">
+            <h2>Player 2</h2>
+            <p id="player2"></p>
+        </div>
     </main>
 </body>
+
 </html>
