Turn feedback, finished basic game

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <div class="score">
-            <h2>Player 1</h2>
-            <p id="player1"></p>
+            <h2 id="title1" class="highlighted">Player 1</h2>
+            <p id="score1"></p>
         </div>
         <div id="game">
             <button id="top-left"></button>
@@ -30,8 +30,8 @@
             <button id="bottom-right"></button>
         </div>
         <div class="score">
-            <h2>Player 2</h2>
-            <p id="player2"></p>
+            <h2 id="title2">Player 2</h2>
+            <p id="score2"></p>
         </div>
     </main>
 </body>
