--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script src="./game.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
 
 <body>
     <header>
-        <h1>Tic-tac-toe</h1>
+        <h1>tic - tac - toe</h1>
+        <!-- <p id="reset">reset?</p> -->
     </header>
     <main>
         <div class="score">
-            <h2 id="title1" class="highlighted">Player 1</h2>
+            <h2 id="title1" class="highlighted">Player One</h2>
             <p id="score1"></p>
         </div>
         <div id="game">
@@ -30,7 +32,7 @@
             <button id="bottom-right"></button>
         </div>
         <div class="score">
-            <h2 id="title2">Player 2</h2>
+            <h2 id="title2">Player Two</h2>
             <p id="score2"></p>
         </div>
     </main>
