--- a/index.html
+++ b/index.html
@@ -6,34 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./app.js"></script>
     <script src="./game.js"></script>
+    <script src="./utils.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
 
 <body>
-    <header>
-        <h1>tic - tac - toe</h1>
-        <!-- <p id="reset">reset?</p> -->
-    </header>
     <main>
-        <div class="score">
-            <h2 id="title1" class="highlighted">Player One</h2>
-            <p id="score1"></p>
+        <div id="p1">
+            <p class="symbol active"></p>
+            <p class="name"></p>
+            <p class="score"></p>
         </div>
         <div id="game">
-            <button id="top-left"></button>
-            <button id="top-middle"></button>
-            <button id="top-right"></button>
-            <button id="middle-left"></button>
-            <button id="middle-middle"></button>
-            <button id="middle-right"></button>
-            <button id="bottom-left"></button>
-            <button id="bottom-middle"></button>
-            <button id="bottom-right"></button>
+            <table></table>
         </div>
-        <div class="score">
-            <h2 id="title2">Player Two</h2>
-            <p id="score2"></p>
+        <div id="p2">
+            <p class="symbol"></p>
+            <p class="name"></p>
+            <p class="score"></p>
+        </div>
+        <div id="popup" class="hidden">
+            <div id="img"></div>
+            <div id="text">
+                <h2>Player 1 Wins!</h2>
+                <p>Congratulations!</p>
+            </div>
         </div>
     </main>
 </body>
